@@ -1,7 +1,8 @@
-True ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
+true ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
 
 Transcript cr; cr.
 
-False ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
+false ifTrue: [ Transcript show: 'Truth'. ] ifFalse: [ Transcript show: 'False'. ].
 
 Transcript cr; cr.
+
